# eq-submission-confirmation-consumer

./: .development.env  .gcloudignore  .gitignore  .isort.cfg  .pylintrc  Makefile  Pipfile  README.md  deploy.yaml  deploy_function.yaml  dev-notify-api-key  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: codeql-analysis.yaml  pull_request.yaml
ci/: README.md  delete_function.yaml  deploy_credentials.sh  deploy_credentials.yaml  deploy_function.yaml  destroy_credentials.yaml  pause_cloud_task_queue.yaml  resume_cloud_task_queue.yaml
scripts/: deploy.sh  deploy_function.sh  run_lint.sh  run_mypy.sh  run_tests.sh  run_unit_tests.sh
tests/: conftest.py  test_integration.py  test_main.py
